# stack_alloc

./: Cargo.toml  README.md
src/: bitmapped_stack.rs  bucketed.rs  bucketed_alloc.rs  factory_chain.rs  global.rs  global_allocator.rs  lib.rs  macros.rs  main.rs  memory_source.rs  metadata_allocator.rs  metadata_box.rs  sized_allocator.rs  test_memory_source.rs
tests/: test.rs
